--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "basiclightbox": "^5.0.3",
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "pnotify": "^4.0.1"
   }
 }
